--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@
     <title>Amicbridge – Crypto, Stablecoins & Tokenized Assets</title>
     <meta
       name="description"
-      content="Amicbridge connects people who want to borrow and lend using crypto, stablecoins and tokenized assets – directly wallet to wallet."
+      content=" Dezentralized web page Amicbridge connects people who want to borrow and lend using crypto, stablecoins and tokenized assets – directly wallet to wallet."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
